# infotecs-sqlite

./: readme.md
1_build-sqlite-so/: Dockerfile  readme-get-image-from-dockerfile.md  readme-get-image-from-hub.md
1_build-sqlite-so/sqlite-sources/: CMakeLists.txt
2_vm-vagrant-ansible/: Vagrantfile  build-sqlite.yml  install-docker.yml
3_conan-example/conan-app/: CMakeLists.txt  conanfile.py
3_conan-example/conan-app/src/: main.cpp
4_gitlab/: .gitlab-ci.yml
